# axum-web-server

./: Cargo.toml
be/migrations/: 20250210132042_init.up.sql
be/src/: handler.rs  main.rs  schema.rs
fe/: package-lock.json  package.json
fe/src/app/: layout.tsx
fe/src/app/users/: page.tsx
fe/src/features/users/: actions.ts
fe/src/features/users/components/: add-user.tsx  user.tsx  users-dashboard.tsx  users.tsx
migrations/: 20250210132042_init.up.sql
schemas/: pets.sql
src/: db.rs  handler.rs  handlers.rs  main.rs  model.rs  route.rs  schema.rs
